--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,28 +1,25 @@
-# Jenkins JDK 17, JDK 11 is being deprecated
+# Jenkins JDK 17
 FROM jenkins/jenkins:latest-jdk17
 
 USER root
 
-# Install dependencies with retry logic and better error handling
-RUN apt-get update --fix-missing || apt-get update --fix-missing && \
-    apt-get install -y --no-install-recommends \
-    lsb-release \
-    curl \
-    gnupg \
-    ca-certificates \
-    && rm -rf /var/lib/apt/lists/*
+# Switch to HTTPS repos for better connectivity
+RUN sed -i 's|http://deb.debian.org|https://deb.debian.org|g' /etc/apt/sources.list.d/debian.sources 2>/dev/null || \
+    sed -i 's|http://deb.debian.org|https://deb.debian.org|g' /etc/apt/sources.list 2>/dev/null || true
 
-# Install Docker CLI
-RUN curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg && \
-    echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] \
-    https://download.docker.com/linux/debian $(lsb_release -cs) stable" > /etc/apt/sources.list.d/docker.list && \
-    apt-get update && apt-get install -y docker-ce-cli && \
+# Install Docker CLI only (simplified)
+RUN apt-get update && \
+    apt-get install -y ca-certificates curl && \
+    install -m 0755 -d /etc/apt/keyrings && \
+    curl -fsSL https://download.docker.com/linux/debian/gpg -o /etc/apt/keyrings/docker.asc && \
+    chmod a+r /etc/apt/keyrings/docker.asc && \
+    echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/debian bookworm stable" > /etc/apt/sources.list.d/docker.list && \
+    apt-get update && \
+    apt-get install -y docker-ce-cli && \
     rm -rf /var/lib/apt/lists/*
 
 # Set timezone
-RUN apt-get update && apt-get install -y --no-install-recommends tzdata && \
-    rm -rf /var/lib/apt/lists/*
-
 ENV TZ="Asia/Ho_Chi_Minh"
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 USER jenkins
